--- a/src/style.css
+++ b/src/style.css
@@ -176,23 +176,49 @@ img {
   line-height: 12.1px;
   margin: 10px 0 0 0;
   padding: 4px 6px;
-  background-color: #7b00ff;
   border-radius: 24px;
   color: #ffffff;
 }
 
 .statsContainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 2fr;
+  display: flex;
+  flex-direction: column;
   font-size: 13px;
   gap: 5px;
   padding: 20px 0px;
 }
-.attackContainer {
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+progress.attack::-webkit-progress-bar {
+    background-color: #d4d4d4;
+    box-shadow: 
+    1px 1px 0 0 black,
+    2px 1px 0 0 black,
+    3px 1px 0 0 black,
+    1px 2px 0 0 black,
+    2px 2px 0 0 black,
+    3px 2px 0 0 black;
+    border: 2px solid black;
+}
+
+progress.attack::-webkit-progress-value {
+    background-color: #7b00ff;
+    background-color: linear-gradient(to bottom, #313131, #7b00ff);
+}
+
+progress.defense::-webkit-progress-bar {
+    background-color: #d4d4d4;
+}
+
+progress.defense::-webkit-progress-value {
+    background-color: #000000;
+    border-radius: 25px;
 }
 
 .score {
@@ -262,3 +288,51 @@ align-items: center;
     grid-template-columns: repeat(5, 1fr);
   }
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 65px;
+  aspect-ratio: 1;
+  position: relative;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  position: absolute;
+  border-radius: 50px;
+  box-shadow: 0 0 0 3px inset #fff;
+  animation: l4 2.5s infinite;
+}
+.loader:after {
+  animation-delay: -1.25s;
+}
+@keyframes l4 {
+  0% {
+    inset: 0 35px 35px 0;
+  }
+  12.5% {
+    inset: 0 35px 0 0;
+  }
+  25% {
+    inset: 35px 35px 0 0;
+  }
+  37.5% {
+    inset: 35px 0 0 0;
+  }
+  50% {
+    inset: 35px 0 0 35px;
+  }
+  62.5% {
+    inset: 0 0 0 35px;
+  }
+  75% {
+    inset: 0 0 35px 35px;
+  }
+  87.5% {
+    inset: 0 0 35px 0;
+  }
+  100% {
+    inset: 0 35px 35px 0;
+  }
+}
+
