--- a/src/style.css
+++ b/src/style.css
@@ -1,338 +1,377 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Inter", serif;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: 'Inter', serif;
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  align-items: center;
-  padding: 0 20px;
+   display: flex;
+   justify-content: space-between;
+   position: relative;
+   align-items: center;
+   padding: 0 20px;
 }
 nav {
-  display: flex;
-  justify-content: center;
+   display: flex;
+   justify-content: center;
+}
+
+.modalContainer {
+   position: relative;
+   background-color: #ffffff;
+   position: fixed;
+   top: 50px;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   display: none;
+   overflow-y: auto;
+}
+.close {
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   cursor: pointer;
 }
 
 ul {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
-  margin: 20px 20px;
+   display: grid;
+   grid-template-columns: 1fr;
+   gap: 20px;
+   margin: 20px 20px;
 }
 
 li {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 220px;
-  height: 300px;
-  border-radius: 20px;
-  background-color: #EFEFEF;
-box-shadow: -1px 3px 6px 2px rgb(196, 196, 196);
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 220px;
+   height: 300px;
+   border-radius: 20px;
+   background-color: #efefef;
+   box-shadow: -1px 3px 6px 2px rgb(196, 196, 196);
 }
 
-#after{
-    rotate: 90deg;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    background-color: #000000;
-    min-height: 40px;
-    min-width: 40px;
-    padding: 5px;
-    color: #ffffff;
-    border-radius: 10px;
+#after {
+   rotate: 90deg;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-decoration: none;
+   background-color: #000000;
+   min-height: 40px;
+   min-width: 40px;
+   padding: 5px;
+   color: #ffffff;
+   border-radius: 10px;
 }
-#after:hover{
-    background-color: #7B00FF;
-    color: #ffffff;
+#after:hover {
+   background-color: #7b00ff;
+   color: #ffffff;
 }
 
-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+button {
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
 
 #cards-container {
-  display: flex;
-  justify-content: center;
-  background-color: #000000;
-  padding-top:20px;
+   display: flex;
+   justify-content: center;
+   background-color: #000000;
+   padding-top: 20px;
 }
 
-.hola, .favorito, .api, .inicio{
-    font-size: 22px;
-    font-weight: 500;
+.hola,
+.favorito,
+.api,
+.inicio {
+   font-size: 22px;
+   font-weight: 500;
 }
 
 .pokeImg {
-  width: 87px;
-  height: 89px;
+   width: 87px;
+   height: 89px;
 }
 .title {
-  text-align: center;
-  padding: 15px 0;
+   text-align: center;
+   padding: 15px 0;
 }
 
 .imgHeader {
-  width: 20px;
-  height: 20px;
-  border: none;
-  background-color: none;
+   width: 20px;
+   height: 20px;
+   border: none;
+   background-color: none;
 }
 
 .showNav {
-  position: fixed;
-  top: 0;
-  right:0;
-  width: 70%;
-  height: 100%;
-  background-color: #313131;;
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
-  z-index: 9999;
+   position: fixed;
+   top: 0;
+   right: 0;
+   width: 70%;
+   height: 100%;
+   background-color: #313131;
+   color: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition:
+      opacity 0.3s ease,
+      visibility 0.3s ease;
+   z-index: 9999;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+   max-width: 100%;
+   height: auto;
 }
 
 .mainContainer {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  row-gap: 20px;
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+   row-gap: 20px;
 }
 
 .imageContainer {
-  display: flex;
-  justify-content: flex-end;
-  margin: 20px 20px 0 0;
+   display: flex;
+   justify-content: flex-end;
+   margin: 20px 20px 0 0;
 }
 
 #pokeimage {
-  width: 50px;
-  height: 50px;
+   width: 50px;
+   height: 50px;
 }
 
 .close {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: flex-end;
+   width: 20px;
+   height: 20px;
+   display: flex;
+   justify-content: flex-end;
 }
 
 .desktopContainer {
-  display: none;
+   display: none;
 }
 
 .secondaryCardContainer {
-    display: flex;
-    flex-direction:column;
-    align-items: center;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
-.containerHpNum{
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 20px;
+.containerHpNum {
+   display: flex;
+   justify-content: flex-end;
+   padding-right: 20px;
 }
 
 .hpContainer {
-  display: flex;
-  background-color: #d4d4d4;
-  border-radius: 24px;
-  padding: 2px 10px;
+   display: flex;
+   background-color: #d4d4d4;
+   border-radius: 24px;
+   padding: 2px 10px;
 }
 
 .hp {
-  font-weight: 500;
-  padding-right: 3px;
+   font-weight: 500;
+   padding-right: 3px;
 }
 
 .name {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 29.05px;
-  border-bottom: 1px solid #7b00ff;
-  color: #313131;
+   font-weight: 600;
+   font-size: 24px;
+   line-height: 29.05px;
+   color: #313131;
 }
 
 .types {
-  font-weight: 500;
-  font-size: 10px;
-  line-height: 12.1px;
-  margin: 10px 0 0 0;
-  padding: 4px 6px;
-  border-radius: 24px;
-  color: #ffffff;
+   font-weight: 500;
+   font-size: 10px;
+   line-height: 12.1px;
+   margin: 10px 0 0 0;
+   padding: 4px 6px;
+   border-radius: 24px;
+   color: #ffffff;
 }
 
 .statsContainer {
-  display: flex;
-  flex-direction: column;
-  font-size: 13px;
-  gap: 5px;
-  padding: 20px 0px;
+   display: inline-flex;
+   flex-direction: column;
+   font-size: 13px;
+   gap: 5px;
+   padding: 20px 0px;
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   position: relative;
+}
+
+.num {
+   position: absolute;
+   background-color: #ffffff;
+   border-radius: 50%;
+   top: 10%;
+   right: -5%;
+   width: 25px;
+   height: 25px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: #313131;
 }
 
 progress.attack::-webkit-progress-bar {
-    background-color: #d4d4d4;
-    box-shadow: 
-    1px 1px 0 0 black,
-    2px 1px 0 0 black,
-    3px 1px 0 0 black,
-    1px 2px 0 0 black,
-    2px 2px 0 0 black,
-    3px 2px 0 0 black;
-    border: 2px solid black;
+   background-color: #d4d4d4;
+   box-shadow:
+      1px 1px 0 0 black,
+      2px 1px 0 0 black,
+      3px 1px 0 0 black,
+      1px 2px 0 0 black,
+      2px 2px 0 0 black,
+      3px 2px 0 0 black;
+   border: 2px solid black;
 }
 
 progress.attack::-webkit-progress-value {
-    background-color: #7b00ff;
-    background-color: linear-gradient(to bottom, #313131, #7b00ff);
+   background-color: #7b00ff;
+   background-color: linear-gradient(to bottom, #313131, #7b00ff);
 }
 
 progress.defense::-webkit-progress-bar {
-    background-color: #d4d4d4;
+   background-color: #d4d4d4;
 }
 
 progress.defense::-webkit-progress-value {
-    background-color: #000000;
-    border-radius: 25px;
+   background-color: #000000;
+   border-radius: 25px;
 }
 
 .score {
-  font-weight: 300;
-  font-size: 12px;
-  line-height: 12px;
+   font-weight: 300;
+   font-size: 12px;
+   line-height: 12px;
 }
 
 .attack {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 12px;
+   font-weight: 500;
+   font-size: 12px;
+   line-height: 12px;
 }
 
-#pagination__container{
-display: flex;
-justify-content: center;
-gap: 10px;
-height: 80px;
-align-items: center;
+#pagination__container {
+   display: flex;
+   justify-content: center;
+   gap: 10px;
+   height: 80px;
+   align-items: center;
 }
 
-.fav, .delete {
-    width: 20px;
-    height: 20px;
-    cursor: pointer;
+.fav,
+.delete {
+   width: 20px;
+   height: 20px;
+   cursor: pointer;
 }
 
-.home, .inicio, .api{
-    cursor: pointer;
+.home,
+.inicio,
+.api {
+   cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
-  .showNav {
-    display: none !important;
-  }
-  #navButton {
-    display: none !important;
-  }
-  header {
-    align-items: center;
-    padding: 0 60px;
-  }
-  .desktopContainer {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-  }
-  .imgFavorites {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-  }
-  ul {
-    grid-template-columns: repeat(3, 1fr);
-  }
+   .showNav {
+      display: none !important;
+   }
+   #navButton {
+      display: none !important;
+   }
+   header {
+      align-items: center;
+      padding: 0 60px;
+   }
+   .desktopContainer {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+   }
+   .imgFavorites {
+      width: 30px;
+      height: 30px;
+      cursor: pointer;
+   }
+   ul {
+      grid-template-columns: repeat(3, 1fr);
+   }
 }
 
 @media screen and (min-width: 1024px) {
-  ul {
-    grid-template-columns: repeat(4, 1fr);
-  }
+   ul {
+      grid-template-columns: repeat(4, 1fr);
+   }
 }
 
 @media screen and (min-width: 1440px) {
-  ul {
-    grid-template-columns: repeat(5, 1fr);
-  }
+   ul {
+      grid-template-columns: repeat(5, 1fr);
+   }
 }
 
-/* HTML: <div class="loader"></div> */
+/*LOADER*/
 .loader {
-  width: 65px;
-  aspect-ratio: 1;
-  position: relative;
+   width: 65px;
+   aspect-ratio: 1;
+   position: relative;
 }
 .loader:before,
 .loader:after {
-  content: "";
-  position: absolute;
-  border-radius: 50px;
-  box-shadow: 0 0 0 3px inset #fff;
-  animation: l4 2.5s infinite;
+   content: '';
+   position: absolute;
+   border-radius: 50px;
+   box-shadow: 0 0 0 3px inset #fff;
+   animation: l4 2.5s infinite;
 }
 .loader:after {
-  animation-delay: -1.25s;
+   animation-delay: -1.25s;
 }
 @keyframes l4 {
-  0% {
-    inset: 0 35px 35px 0;
-  }
-  12.5% {
-    inset: 0 35px 0 0;
-  }
-  25% {
-    inset: 35px 35px 0 0;
-  }
-  37.5% {
-    inset: 35px 0 0 0;
-  }
-  50% {
-    inset: 35px 0 0 35px;
-  }
-  62.5% {
-    inset: 0 0 0 35px;
-  }
-  75% {
-    inset: 0 0 35px 35px;
-  }
-  87.5% {
-    inset: 0 0 35px 0;
-  }
-  100% {
-    inset: 0 35px 35px 0;
-  }
+   0% {
+      inset: 0 35px 35px 0;
+   }
+   12.5% {
+      inset: 0 35px 0 0;
+   }
+   25% {
+      inset: 35px 35px 0 0;
+   }
+   37.5% {
+      inset: 35px 0 0 0;
+   }
+   50% {
+      inset: 35px 0 0 35px;
+   }
+   62.5% {
+      inset: 0 0 0 35px;
+   }
+   75% {
+      inset: 0 0 35px 35px;
+   }
+   87.5% {
+      inset: 0 0 35px 0;
+   }
+   100% {
+      inset: 0 35px 35px 0;
+   }
 }
-
